    - 'changelog' subcommand:
      - Use source version for fetching remote changelogs if present. Fixes
        determining remote path for versions that had a binary-only rebuild(s).
  * Cupt:
    - Cache:
      - BinaryVersion:
        - New field 'source_package_version'. It's got filled when the source
          version for package differs from the binary one.
      - Skip 'Explanation: ' lines when parsing preferences. Thanks to
        Stefano Zacchiroli <zack@debian.org>.

 -- Eugene V. Lyubimkin <jackyf.devel@gmail.com>  Mon, 11 May 2009 17:00:47 +0300

cupt (0.1.2) experimental; urgency=low

  * cupt:
    - 'markauto'/'unmarkauto' subcommands:
      - Don't require worker at compilation stage. Speeds up compilation a bit.
    - Implemented '--no-remove' option for management actions.
    - Implemented '--no-auto-remove' option for management actions.
    - Selecting a version for binary package:
      - Allow '-' symbols in distribution names.
    - Properly output error when no command specified.
    - Use '#/usr/bin/env perl' for portability. Thanks to
      Michael Stapelberg <michael@stapelberg.de>.
    - New 'changelog' subcommand. Currently implemented only for installed
      packages and official Debian and Ubuntu repositories.
  * Cupt:
    - Core:
      - 'mydie', 'myerr', 'mywarn' subroutines now print to STDERR. Thanks to
        Stefano Zacchiroli <zack@debian.org>.
      - New subroutine 'is_version_string_native'.
    - Download:
      - Manager:
        - [API break] 'download' method: now one should specify array of URIs,
          not single URI for each download entry. Enables mirroring feature.
        - Advanced error message in download size check.
      - Methods/Curl:
        - Detect HTTP/FTP/HTTPS error codes.
        - Put HTTP/FTP/HTTPS response codes into error messages.
        - Don't put Curl internal error codes into error messages.
        - Follow HTTP redirects if the option